# clustr

./: .flake8  .gitignore  README.md  alzheimer-clusters.json  pyproject.toml  test.sh
clustr/: cli.py  cluster.py  util.py
data/: 2024-08-01_2024-10-15-alzheimer.json  clusters.json
scripts/: run.sh
