[tool.poetry]
name = "clustr"
version = "0.1.0"
description = ""
authors = ["Jeffrey Wong <jvwong@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
loguru = "^0.7.2"
pydantic = "^2.9.2"
json-stream = "^2.3.2"
more-itertools = "^10.5.0"
adapters = "^1.0.0"
numpy = "^1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
black = "^24.8.0"
pytest-cov = "^5.0.0"
mypy = "^1.11.2"
flake8 = "^7.1.1"

[tool.black]
line-length = 119
skip-string-normalization = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
